# P4-Graficos3D

./: .gitignore  CMakeLists.txt
..bfg-report/2022-01-03/16-45-13/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
P3OGL/: P3OGL.filters  P3OGL.sln  P3OGL.vcxproj  P3OGL.vcxproj.filters
img/: helmet_albedo.png~
shaders_P3/: shader.v0.frag  shader.v0.vert  shader.v1.frag  shader.v1.vert  shader_v1_frag.glsl  shader_v1_vert.glsl
shaders_P4/: deferred_lightning_base.frag  deferred_lightning_pass.frag  deferred_lightning_pass.vert  draw_color.frag  draw_normals.frag  fwRendering.v0.frag  fwRendering.v0.vert  gaussian_h.frag  post_processing.frag  post_processing.vert  shader.v0.frag  shader.v1.frag  shader.v1.vert  shader_material.frag  shader_material.vert  shader_v1_frag.glsl
src/: AssimpManager.h  BOX.h  Camera.cpp  Light.hpp  LightManager.hpp  LoadingMesh.hpp  Material.hpp  MaterialManager.hpp  MeshInstance.hpp  MeshLoader.h  MeshManager.hpp  OGLMesh.hpp  OGLObject.hpp  OpenGLManager.cpp  OpenGLManager.h  Program.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  ShaderManager.cpp  ShaderManager.hpp  Shaders.hpp  Spatial.h  Texture.hpp  TextureManager.cpp  TextureManager.hpp  VBOHandler.hpp  VBOManager.hpp  WorldManager.hpp  auxiliar.cpp  auxiliar.h  main.cpp
src/aux/: BOX.h  PLANE.h  auxiliar.cpp  demo.hpp  statistics.hpp
src/demos/: demo_1.hpp  demo_2.hpp  demo_3.hpp  demo_4.hpp
src/demos/scripts/: blue_light.h  fps_camera.h  mesh_rotator.h  orbital_camera.h  rotate_dir_light.h
src/fbo/: fboManager.hpp
src/material/: Material.hpp  MaterialManager.hpp
src/ogl/: OGLObject.hpp  OpenGLManager.cpp  OpenGLManager.h  VBOManager.hpp
src/scene/: Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/scriptable/: Scriptable.hpp  ScriptableManager.hpp
src/shader/: Program.hpp  ShaderManager.cpp  ShaderManager.hpp  Shaders.hpp
src/spatial/: Spatial.h  WorldManager.hpp
src/spatial/camera/: Camera.cpp  Camera.h
src/spatial/light/: Light.cpp  Light.hpp  LightManager.hpp
src/spatial/mesh/: LoadingMesh.hpp  MeshInstance.hpp  OGLMesh.hpp
src/texture/: Texture.hpp  TextureManager.cpp  TextureManager.hpp
